[project]
name = "aoc"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "cachetools>=5.5.0",
    "more-itertools>=10.5.0",
    "networkx>=3.4.2",
    "platformdirs>=4.3.6",
    "requests>=2.32.3",
    "rich>=13.9.4",
]

[project.scripts]
aoc = 'aoc.__main__:main'

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.4",
    "types-requests>=2.32.0.20241016",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if (typing\\.)TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff.lint]
# Enable isort rules.
extend-select = ["I"]

[tool.mypy]
files = ["aoc"]
#strict = true

[[tool.mypy.overrides]]
module = "networkx.*"
ignore_missing_imports = true
