[project]
name = "aoc"
version = "0.1.0"
requires-python = "~=3.14.0"
dependencies = [
    "more-itertools>=10.7.0",
    "networkx>=3.4.2",
    "platformdirs>=4.3.7",
    "requests>=2.32.3",
    "rich>=14.0.0",
]

[project.scripts]
aoc = 'aoc.__main__:main'

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.8",
    "types-networkx>=3.6.0.20251127",
    "types-requests>=2.32.0.20250328",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if (typing\\.)TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff.lint]
# Enable isort rules.
extend-select = ["I"]

[tool.mypy]
files = ["aoc"]
strict = true
